set(framework_files
        demangle.hpp
	demangle.cpp
        stb_image.h
        stb_image_resize.h
        stb_image.cpp
        stb_image.hpp
        vtfFilesystem.hpp
        vtfZDeletable.cpp
        vtfZDeletable.hpp
        vtfBacktrace.cpp
        vtfBacktrace.hpp
        vtfCUtils.cpp
        vtfCUtils.hpp
        vtfStrictTemplates.hpp
        vtfVkUtils.hpp
        vtfVkUtils.cpp
        vtfZUtils.cpp
        vtfZUtils.hpp
        vtfCopyUtils.hpp
        vtfFormatUtils.cpp
        vtfFormatUtils.hpp
        vtfStructUtils.cpp
        vtfStructUtils.hpp
        vtfExtensions.cpp
        vtfExtensions.hpp
        vtfTermColor.cpp
        vtfTermColor.hpp
        vtfVector.hpp
        vtfMatrix.cpp
        vtfMatrix.hpp
        vtfThreadSafeLogger.cpp
        vtfThreadSafeLogger.hpp
        vtfZBarriers.cpp
        vtfZBarriers.hpp
        vtfZBuffer.cpp
        vtfZBuffer.hpp
        vtfZImage.cpp
        vtfZImage.hpp
		vtfZSharedDevice.cpp
		vtfZSharedDevice.hpp
        vtfTextImage.cpp
        vtfTextImage.hpp
        vtfZCommandBuffer.cpp
        vtfZCommandBuffer.hpp
        vtfZDeviceMemory.hpp
        vtfProgramCollection.cpp
        vtfProgramCollection.hpp
        vtfDebugMessenger.cpp
        vtfDebugMessenger.hpp
        vtfLayoutManager.cpp
        vtfLayoutManager.hpp
        vtfZPipeline.cpp
        vtfZPipeline.hpp
        vtfVertexInput.cpp
        vtfVertexInput.hpp
        vtfObjectLoader.cpp
        vtfObjectLoader.hpp
        vtfGlfwEvents.cpp
        vtfGlfwEvents.hpp
        vtfContext.cpp
        vtfContext.hpp
        vtfCanvas.cpp
        vtfCanvas.hpp
)

add_library(framework STATIC ${framework_files})
target_include_directories(framework BEFORE PRIVATE ${GLFW3_INCLUDE_DIR})
target_include_directories(framework BEFORE PRIVATE ${VULKAN_INCLUDE_DIR})
target_link_libraries(framework ${COMMON_LIBS})

