cmake_minimum_required(VERSION 3.10)
project(getvkhver CXX)
set(CMAKE_CXX_STANDARD 17)
if(VTF_SAFETY_CRITICAL)
	add_definitions(-DVTF_SAFETY_CRITICAL=1)
	message(STATUS AAAAA)
else()
	add_definitions(-DVTF_SAFETY_CRITICAL=0)
	message(STATUS BBBB)
endif()
add_executable(getvkhver getvkhver.cpp)
string(REPLACE "\"" "" VKINC "${INC}")
target_include_directories(getvkhver BEFORE PRIVATE ${VKINC})
#message(STATUS "%%%%%%%%%%% ${VKINC}")

